--- a/common-dtos/build.gradle
+++ b/common-dtos/build.gradle
@@ -1,14 +1,7 @@
-group 'Java3'
-version '1.0-SNAPSHOT'
+apply from: "${rootDir}/gradle/java.gradle"
 
-apply plugin: 'java'
+project(":common-dtos") {
+    dependencies {
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
 }
