--- a/core-api/build.gradle
+++ b/core-api/build.gradle
@@ -1,14 +1,7 @@
-group 'Java3'
-version '1.0-SNAPSHOT'
+apply from: "${rootDir}/gradle/java.gradle"
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+project(":core-api") {
+    dependencies {
+        compile project(":common-dtos")
+    }
 }
