--- a/integrations-rest/build.gradle
+++ b/integrations-rest/build.gradle
@@ -1,14 +1,10 @@
-group 'Java3'
-version '1.0-SNAPSHOT'
+apply from: "${rootDir}/gradle/java.gradle"
 
-apply plugin: 'java'
+project(":integrations-rest") {
+    dependencies {
+        compile project(":core-api")
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile libs.spring_boot_starter_web
+        compile libs.spring_boot_starter_test
+    }
 }
