--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -5,12 +5,15 @@ ext {
             liquibaseVersion             : "3.5.3",
             guavaVersion                 : "18.0",
             hibernateVersion             : "5.0.12.Final",
+            springJdbcVersion            : "5.0.2.RELEASE",
+            mysqlVersion                 : "6.0.5"
     ]
     libs = [
             spring_boot_starter_web     : "org.springframework.boot:spring-boot-starter-web:$versions.springBootVersion",
             spring_boot_starter_data_jpa: "org.springframework.boot:spring-boot-starter-data-jpa:$versions.springBootVersion",
             spring_boot_starter_test    : "org.springframework.boot:spring-boot-starter-test:$versions.springBootVersion",
-
+            springJdbc                  : "org.springframework:spring-jdbc:$versions.springJdbcVersion",
+            mysql_jdbcDriver            : "mysql:mysql-connector-java:$versions.mysqlVersion",
             h2                          : "com.h2database:h2:$versions.h2Version",
             liquibase                   : "org.liquibase:liquibase-core:$versions.liquibaseVersion",
             guava                       : "com.google.guava:guava:$versions.guavaVersion",
