--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DATASOURCE
-spring.datasource.url=jdbc:mysql://localhost:3306/java3;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:mysql://localhost:3306/java3
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.initial-size=10
 
